Closed Bug 1447091 Opened 6 years ago Closed 6 years ago

Fix non-unified build bustage in dom/media/

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox61 --- fixed

People

(Reporter: dholbert, Assigned: dholbert)

Details

Attachments

(1 file)

While investigating bug 1447070, I checked dom/media as well (dropping UNIFIED_ from its moz.build file to shake out non-unified build bustage), and found a few errors there:
=====
 0:16.07 ../../../mozilla/dom/media/MediaTimer.cpp: In member function ‘void mozilla::MediaTimer::DispatchDestroy()’:
 0:16.08 ../../../mozilla/dom/media/MediaTimer.cpp:50:3: error: ‘Unused’ was not declared in this scope
 0:16.08    Unused << rv;
 0:16.08    ^~~~~~


 0:19.56 ../../../mozilla/dom/media/FileMediaResource.cpp: In member function ‘void mozilla::FileMediaResource::EnsureSizeInitialized()’:
 0:19.56 ../../../mozilla/dom/media/FileMediaResource.cpp:30:36: error: invalid use of incomplete type ‘class mozilla::AbstractThread’
 0:19.56      mCallback->AbstractMainThread()->Dispatch(
 0:19.56                                     ^~
=====

Patch coming up to fix these errors.
Comment on attachment 8960287 [details]
Bug 1447091: Add #includes to fix non-unified bustage in dom/media.

https://reviewboard.mozilla.org/r/229060/#review234848

Thank you for fixing these.
Attachment #8960287 - Flags: review?(gsquelart) → review+
Pushed by dholbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3c4faed9b07d
Add #includes to fix non-unified bustage in dom/media. r=gerald
https://hg.mozilla.org/mozilla-central/rev/3c4faed9b07d
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: