Bug 1447091: Add #includes to fix non-unified bustage in dom/media. r=gerald

This fixes these two errors:
FileMediaResource.cpp:30:36: error: invalid use of incomplete type ‘class mozilla::AbstractThread’
   mCallback->AbstractMainThread()->Dispatch(

MediaTimer.cpp:50:3: error: ‘Unused’ was not declared in this scope
   Unused << rv;

MozReview-Commit-ID: WkPZc22dMF